errors_utf8.txt
cargo :     Checking 
flowbot-rs v0.1.0 
(C:\Users\AMAN ANU\De
sktop\amxcodes\nanobo
t\nanobot-rs-clean)
At line:1 char:29
+ $env:CARGO_INCREMEN
TAL="0"; cargo check 
> errors.txt 2>&1
+                    
         ~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking fl...nobot    
-rs-clean):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
error[E0432]: 
unresolved import `cr
ate::gateway::agent_m
anager`
 --> src\tools\sessio
ns.rs:4:21
  |
4 | use crate::gatewa
y::agent_manager::{Ag
entManager, 
CleanupPolicy, 
SessionType};
  |                  
   ^^^^^^^^^^^^^ 
could not find 
`agent_manager` in 
`gateway`

error[E0433]: failed 
to resolve: could 
not find 
`agent_manager` in 
`gateway`
  --> src\agent\mod.r
s:69:51
   |
69 |     
agent_manager: std::s
ync::Arc<crate::gatew
ay::agent_manager::Ag
entManager>,
   |                 
                     
             
^^^^^^^^^^^^^ could 
not find 
`agent_manager` in 
`gateway`

error[E0433]: failed 
to resolve: could 
not find 
`agent_manager` in 
`gateway`
   --> src\agent\mod.
rs:118:29
    |
118 |             cra
te::gateway::agent_ma
nager::AgentManager::
new(db_path.clone())
    |                
             
^^^^^^^^^^^^^ could 
not find 
`agent_manager` in 
`gateway`

error[E0433]: failed 
to resolve: could 
not find 
`agent_manager` in 
`gateway`
  --> src\tools\execu
tor.rs:64:44
   |
64 |     
agent_manager: Option
<&crate::gateway::age
nt_manager::AgentMana
ger>,
   |                 
                     
      ^^^^^^^^^^^^^ 
could not find 
`agent_manager` in 
`gateway`

warning: unused 
imports: `ToolCall` 
and `ToolResult`
 --> src\antigravity.
rs:7:32
  |
7 | use rig::completi
on::message::{ToolCal
l, ToolResult, 
ToolResultContent, 
UserContent};
  |                  
              
^^^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` on by 
default

warning: unused 
import: `crate::confi
g::OAuthTokens`
  --> src\antigravity
.rs:10:5
   |
10 | use crate::confi
g::OAuthTokens;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^

warning: unused 
import: `crate::oauth
::OAuthFlow`
  --> src\antigravity
.rs:11:5
   |
11 | use crate::oauth
::OAuthFlow;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^

warning: unused 
imports: `Antigravity
CompletionModel` and 
`AntigravityStreaming
Response`
 --> 
src\agent\mod.rs:3:45
  |
3 | use crate::antigr
avity::{AntigravityCl
ient, AntigravityComp
letionModel, Antigrav
ityStreamingResponse}
;
  |                  
                     
      ^^^^^^^^^^^^^^^
^^^^^^^^^^^  ^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`Deserialize` and 
`Serialize`
  --> src\agent\mod.r
s:13:13
   |
13 | use 
serde::{Deserialize, 
Serialize};
   |             
^^^^^^^^^^^  
^^^^^^^^^

warning: unused 
import: 
`std::path::Path`
 --> src\setup\templa
tes.rs:1:5
  |
1 | use 
std::path::Path;
  |     
^^^^^^^^^^^^^^^

warning: unused 
import: `Child`
 --> src\tools\proces
s.rs:4:31
  |
4 | use tokio::proces
s::{Command, Child};
  |                  
             ^^^^^

warning: unused 
import: `Path`
 --> src\persistence.
rs:6:17
  |
6 | use 
std::path::{Path, 
PathBuf};
  |                 
^^^^

warning: unused 
import: 
`std::sync::Mutex`
 --> src\persistence.
rs:7:5
  |
7 | use 
std::sync::Mutex;
  |     
^^^^^^^^^^^^^^^^

warning: unused 
import: `once_cell::s
ync::Lazy`
 --> src\persistence.
rs:8:5
  |
8 | use once_cell::sy
nc::Lazy;
  |     
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
import: `post`
 --> src\gateway\mod.
rs:6:20
  |
6 |     
routing::{get, post},
  |                  
  ^^^^

warning: unused 
import: `uuid::Uuid`
  --> src\gateway\mod
.rs:15:5
   |
15 | use uuid::Uuid;
   |     ^^^^^^^^^^

warning: unused 
import: 
`std::sync::Arc`
 --> 
src\telegram.rs:5:5
  |
5 | use 
std::sync::Arc;
  |     
^^^^^^^^^^^^^^

warning: unused 
import: `colored::*`
 --> 
src\doctor.rs:4:5
  |
4 | use colored::*; 
// We'll add this 
for nice output, or 
use direct ANSI 
codes if keeping 
deps minimal
  |     ^^^^^^^^^^

warning: unused 
import: 
`anyhow::Result`
 --> 
src\sessions.rs:2:5
  |
2 | use 
anyhow::Result;
  |     
^^^^^^^^^^^^^^

warning: unused 
variable: `api_key`
   --> src\antigravit
y.rs:480:5
    |
480 |     api_key: 
&Option<String>,
    |     ^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_api_key`
    |
    = note: `#[warn(u
nused_variables)]` 
on by default

error[E0107]: 
missing generics for 
enum `StreamedAssista
ntContent`
   --> src\agent\mod.
rs:51:50
    |
 51 |     ) -> 
Result<Pin<Box<dyn 
Stream<Item = Result<
StreamedAssistantCont
ent, rig::completion:
:CompletionError>> + 
Send>>, 
rig::completion::...
    |                
                     
             ^^^^^^^^
^^^^^^^^^^^^^^^^ 
expected 1 generic 
argument
    |
note: enum defined 
here, with 1 generic 
parameter: `R`
   --> C:\Users\AMAN 
ANU\.cargo\registry\s
rc\index.crates.io-19
49cf8c6b5b557f\rig-co
re-0.29.0\src\streami
ng.rs:617:10
    |
617 | pub enum Stream
edAssistantContent<R>
 {
    |          ^^^^^^
^^^^^^^^^^^^^^^^^^ -
help: add missing 
generic argument
    |
 51 |     ) -> 
Result<Pin<Box<dyn 
Stream<Item = Result<
StreamedAssistantCont
ent<R>, rig::completi
on::CompletionError>>
 + Send>>, rig::compl
etion::CompletionErro
r> {
    |                
                     
                     
                +++

error[E0599]: no 
function or 
associated item 
named `from_url` 
found for struct `rig
::client::Client` in 
the current scope
   --> src\agent\mod.
rs:88:46
    |
 88 |                
 let client = openai:
:Client::from_url("ht
tps://openrouter.ai/a
pi/v1", &api_key);
    |                
                     
         ^^^^^^^^ 
function or 
associated item not 
found in `rig::client
::Client<OpenAIRespon
sesExt, _>`
    |
note: if you're 
trying to build a 
new `rig::client::Cli
ent<OpenAIResponsesEx
t, _>`, consider 
using `rig::client::C
lient::<Ext, 
H>::new` which 
returns `Result<rig::
client::Client<_, 
_>, rig::http_client:
:Error>`
   --> C:\Users\AMAN 
ANU\.cargo\registry\s
rc\index.crates.io-19
49cf8c6b5b557f\rig-co
re-0.29.0\src\client\
mod.rs:259:5
    |
259 |     pub fn 
new(api_key: impl 
Into<Key>) -> http_cl
ient::Result<Self> {
    |     ^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^
help: there is an 
associated function 
`from` with a 
similar name
   --> /rustc/1159e78
c4747b02ef996e55082b7
04c09b970588\library\
core\src\convert\mod.
rs:596:5

error[E0277]: `?` 
couldn't convert the 
error: `std::string::
String: StdError` is 
not satisfied
  --> src\agent\mod.r
s:93:115
   |
92 |                 
 let api_key = std::e
nv::var("OPENAI_API_K
EY")
   |                 
               ------
---------------------
---- this can't be 
annotated with `?` 
because it has type 
`Result<_, VarError>`
93 |                 
    .or_else(|_| conf
ig.providers.openai.a
s_ref().map(|c| c.api
_key.clone()).ok_or(S
tring::new()))?;
   |                 
     ----------------
---------------------
---------------------
---------------------
--------------^ the 
trait `StdError` is 
not implemented for 
`std::string::String`
   |                 
     |
   |                 
     this has type 
`Result<_, 
std::string::String>`
   |
   = note: the 
question mark 
operation (`?`) 
implicitly performs 
a conversion on the 
error value using 
the `From` trait
   = note: required 
for `anyhow::Error` 
to implement `std::co
nvert::From<std::stri
ng::String>`

error[E0599]: no 
method named 
`completion_model` 
found for enum 
`Result` in the 
current scope
  --> src\agent\mod.r
s:96:47
   |
96 |                 
 AgentProvider::OpenA
I(client.completion_m
odel("gpt-4o"))
   |                 
                     
         
^^^^^^^^^^^^^^^^ 
method not found in `
Result<rig::client::C
lient<OpenAIResponses
Ext, _>, rig::http_cl
ient::Error>`

warning: unused 
variable: 
`noise_selector`
  --> src\tools\fetch
.rs:51:13
   |
51 |         let 
noise_selector = Sele
ctor::parse("script, 
style, nav, footer, 
iframe, svg, 
noscript").unwrap();
   |             
^^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_noise_selector`

error[E0596]: cannot 
borrow data in an 
`Arc` as mutable
  --> src\memory\embe
dding_provider.rs:29:
34
   |
29 |                 
let embeddings = 
model.embed(owned, 
None)?;
   |                 
                 
^^^^^ cannot borrow 
as mutable
   |
   = help: trait 
`DerefMut` is 
required to modify 
through a 
dereference, but it 
is not implemented 
for 
`Arc<TextEmbedding>`

warning: variable 
does not need to be 
mutable
  --> src\gateway\mod
.rs:72:9
   |
72 |     let mut 
send_task = 
tokio::spawn(async 
move {
   |         
----^^^^^^^^^
   |         |
   |         help: 
remove this `mut`
   |
   = note: `#[warn(un
used_mut)]` on by 
default

error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate `toml`
  --> 
src\config.rs:55:30
   |
55 |         let 
config: Config = toml
::from_str(&contents)
?;
   |                 
             ^^^^ 
use of unresolved 
module or unlinked 
crate `toml`
   |
   = help: if you 
wanted to use a 
crate named `toml`, 
use `cargo add toml` 
to add it to your 
`Cargo.toml`

error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate `toml`
  --> 
src\config.rs:65:24
   |
65 |         let 
contents = toml::to_s
tring_pretty(self)?;
   |                 
       ^^^^ use of 
unresolved module or 
unlinked crate `toml`
   |
   = help: if you 
wanted to use a 
crate named `toml`, 
use `cargo add toml` 
to add it to your 
`Cargo.toml`

Some errors have 
detailed 
explanations: E0107, 
E0277, E0432, E0433, 
E0596, E0599.
For more information 
about an error, try 
`rustc --explain 
E0107`.
warning: 
`flowbot-rs` (lib) 
generated 18 warnings
error: could not 
compile `flowbot-rs` 
(lib) due to 11 
previous errors; 18 
warnings emitted
